<resources>
    <string name="app_name">NameQuiz</string>
    <string name="loading_splash">Loading...</string>
    <string name="btn_menu_newgame">Guess the name</string>
    <string name="btn_menu_database">Database</string>
    <string name="name_card">PlaceHolder Name</string>
    <string name="Headline_Card">The Database</string>
    <string name="btn_add_card">Add Character</string>
    <string name="enter_name_hint">Enter the characters name..</string>
    <string name="btn_img_select">Add an image from gallery</string>
    <string name="goBackButton">Add</string>
    <string name="txt_descr_game">Choose Wisely</string>
    <string name="btn_game_return">Enter</string>
    <string name="deleteChar">Enter name</string>
    <string name="btn_del_char">Delete</string>
</resources>
