<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/background"
        tools:context=".ui.CharacterActivity">

    <EditText
            android:layout_width="337dp"
            android:layout_height="62dp"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/enter_name"
            android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.62"
            android:background="@android:color/darker_gray"
            android:hint="@string/enter_name_hint"
            android:textColorHint="@color/cardview_light_background"
            android:textColor="@android:color/black"
            android:fontFamily="monospace" android:layout_marginTop="28dp"
            app:layout_constraintTop_toBottomOf="@+id/btn_img_select"/>
    <Button
            android:text="@string/btn_img_select"
            android:background="@android:color/darker_gray"
            android:layout_width="333dp"
            android:layout_height="64dp"
            android:id="@+id/btn_img_select"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"
            android:layout_marginTop="344dp"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintHorizontal_bias="0.564"/>
    <Button
            android:text="@string/goBackButton"
            android:background="@android:color/darker_gray"
            android:layout_width="338dp"
            android:layout_height="60dp"
            android:id="@+id/goBackButton"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"
            app:layout_constraintHorizontal_bias="0.614" android:layout_marginTop="28dp"
            app:layout_constraintTop_toBottomOf="@+id/enter_name"/>
    <ImageView
            android:layout_width="350dp"
            android:layout_height="300dp" app:srcCompat="@drawable/ic_image_black_24dp"
            android:id="@+id/img_add_char" android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/btn_img_select" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintHorizontal_bias="0.511"
            app:layout_constraintVertical_bias="0.066"/>
</android.support.constraint.ConstraintLayout>