<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:background="@drawable/background"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">
    <Button
            android:text="@string/btn_add_card"
            android:layout_width="393dp"
            android:layout_height="wrap_content"
            android:id="@+id/btn_add_card"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:textAlignment="center" android:textStyle="bold"
            android:fontFamily="monospace" android:textSize="18sp"
            android:layout_marginBottom="8dp" app:layout_constraintBottom_toTopOf="@+id/txt_del"/>
    <Button
            android:text="@string/btn_menu_newgame"
            android:layout_width="393dp"
            android:layout_height="wrap_content"
            android:id="@+id/btn_newgame_main"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:textAlignment="center" android:textStyle="bold"
            android:fontFamily="monospace" android:textSize="18sp"
            app:layout_constraintHorizontal_bias="1.0" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/btn_add_card"/>
    <android.support.v7.widget.RecyclerView
            android:id="@+id/recyclerView"
            android:layout_width="365dp"
            android:layout_height="338dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintHorizontal_bias="1.0"
    />
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/txt_score" android:textSize="14sp"
            android:textColor="@color/cardview_light_background"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/recyclerView"
            android:layout_marginBottom="8dp" app:layout_constraintBottom_toTopOf="@+id/btn_newgame_main"
            app:layout_constraintVertical_bias="0.502"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/txt_score_comment" app:layout_constraintStart_toEndOf="@+id/txt_score"
            android:layout_marginStart="36dp"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/recyclerView"
            android:textColor="@color/cardview_light_background"
            android:layout_marginBottom="8dp" app:layout_constraintBottom_toTopOf="@+id/btn_newgame_main"
            app:layout_constraintVertical_bias="0.502" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent"/>
    <EditText
            android:layout_width="182dp"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/txt_del" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" android:fontFamily="monospace"
            android:textColor="@color/cardview_light_background" android:hint="@string/deleteChar"
            android:textColorHint="@color/cardview_light_background" android:textAlignment="center"/>
    <Button
            android:text="@string/btn_del_char"
            android:layout_width="182dp"
            android:layout_height="wrap_content"
            android:id="@+id/btn_del_char" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/btn_add_card" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" app:layout_constraintStart_toEndOf="@+id/txt_del"
            android:layout_marginStart="8dp" android:fontFamily="monospace" android:textStyle="bold"
            app:layout_constraintHorizontal_bias="1.0"/>
</android.support.constraint.ConstraintLayout>